NLP TP/texts/robotics/robotics.stackexchange_0000057930.txt
Q:

Error building ROS on OSX with latest developer tools 5.1

I've encountered this error building ROS on OSX. As far as I can figure, this started happening after I upgraded my developer tools to the latest version (5.1):
/usr/local/include/boost/atomic/detail/gcc-atomic.hpp:961:64: error: no matching
      constructor for initialization of 'storage_type' (aka
      'boost::atomics::detail::storage128_type')
    explicit base_atomic(value_type const& v) BOOST_NOEXCEPT : v_(0)
                                                               ^  ~
/usr/local/include/boost/atomic/detail/gcc-atomic.hpp:932:28: note: candidate
      constructor (the implicit copy constructor) not viable: no known
      conversion from 'int' to 'const boost::atomics::detail::storage128_type'
      for 1st argument
struct BOOST_ALIGNMENT(16) storage128_type
                           ^
/usr/local/include/boost/atomic/detail/gcc-atomic.hpp:932:28: note: candidate
      constructor (the implicit default constructor) not viable: requires 0
      arguments, but 1 was provided

It looks like this is problem with some of the dependencies for TF or TF2, and is causing a large number of things to fail to build properly.

Originally posted by ahendrix on ROS Answers with karma: 47576 on 2014-03-15
Post score: 1

A:

It looks like this is a bug/change in the latest version of the developer tools.
Homebrew has released the appropriate boost patches from upstream in this issue, but you have to uninstall and reinstall boost to get them. I had to do:
brew update
brew reinstall boost

Originally posted by ahendrix with karma: 47576 on 2014-03-15
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by demmeln on 2014-03-15:
This is correct. Same for me, or rather brew reinstall boost :P
Comment by demmeln on 2014-03-19:
Boost should now be updated in brew upgrade, so no manual reinstall is needed for those who have not done it already. https://github.com/Homebrew/homebrew/pull/27660

